// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatGaugeChart should return an object considering empty historic 1`] = `
Object {
  "series": Array [],
  "title": Object {
    "text": "chartTitle",
  },
}
`;

exports[`formatGaugeChart should return an object with the correct format 1`] = `
Object {
  "series": Array [
    Object {
      "anchor": Object {
        "itemStyle": Object {
          "color": "#FAC858",
        },
        "show": true,
        "showAbove": true,
        "size": 18,
      },
      "axisLine": Object {
        "roundCap": true,
      },
      "center": Array [
        "25%",
        "57%",
      ],
      "data": Array [
        Object {
          "name": "Reliability",
          "value": "32.00",
        },
      ],
      "detail": Object {
        "backgroundColor": "inherit",
        "borderRadius": 3,
        "color": "#fff",
        "fontSize": 18,
        "height": 14,
        "width": 20,
      },
      "max": 1,
      "min": 0,
      "name": "Reliability",
      "pointer": Object {
        "icon": "path://M2.9,0.7L2.9,0.7c1.4,0,2.6,1.2,2.6,2.6v115c0,1.4-1.2,2.6-2.6,2.6l0,0c-1.4,0-2.6-1.2-2.6-2.6V3.3C0.3,1.9,1.4,0.7,2.9,0.7z",
        "length": "80%",
        "offsetCenter": Array [
          0,
          "8%",
        ],
        "width": 8,
      },
      "progress": Object {
        "overlap": true,
        "roundCap": true,
        "show": true,
      },
      "show": true,
      "type": "gauge",
    },
    Object {
      "anchor": Object {
        "itemStyle": Object {
          "color": "#FAC858",
        },
        "show": true,
        "showAbove": true,
        "size": 18,
      },
      "axisLine": Object {
        "roundCap": true,
      },
      "center": Array [
        "50%",
        "57%",
      ],
      "data": Array [
        Object {
          "name": "Reliability",
          "value": "32.00",
        },
      ],
      "detail": Object {
        "backgroundColor": "inherit",
        "borderRadius": 3,
        "color": "#fff",
        "fontSize": 18,
        "height": 14,
        "width": 20,
      },
      "max": 1,
      "min": 0,
      "name": "Reliability",
      "pointer": Object {
        "icon": "path://M2.9,0.7L2.9,0.7c1.4,0,2.6,1.2,2.6,2.6v115c0,1.4-1.2,2.6-2.6,2.6l0,0c-1.4,0-2.6-1.2-2.6-2.6V3.3C0.3,1.9,1.4,0.7,2.9,0.7z",
        "length": "80%",
        "offsetCenter": Array [
          0,
          "8%",
        ],
        "width": 8,
      },
      "progress": Object {
        "overlap": true,
        "roundCap": true,
        "show": true,
      },
      "show": true,
      "type": "gauge",
    },
    Object {
      "anchor": Object {
        "itemStyle": Object {
          "color": "#FAC858",
        },
        "show": true,
        "showAbove": true,
        "size": 18,
      },
      "axisLine": Object {
        "roundCap": true,
      },
      "center": Array [
        "75%",
        "57%",
      ],
      "data": Array [
        Object {
          "name": "Reliability",
          "value": "32.00",
        },
      ],
      "detail": Object {
        "backgroundColor": "inherit",
        "borderRadius": 3,
        "color": "#fff",
        "fontSize": 18,
        "height": 14,
        "width": 20,
      },
      "max": 1,
      "min": 0,
      "name": "Reliability",
      "pointer": Object {
        "icon": "path://M2.9,0.7L2.9,0.7c1.4,0,2.6,1.2,2.6,2.6v115c0,1.4-1.2,2.6-2.6,2.6l0,0c-1.4,0-2.6-1.2-2.6-2.6V3.3C0.3,1.9,1.4,0.7,2.9,0.7z",
        "length": "80%",
        "offsetCenter": Array [
          0,
          "8%",
        ],
        "width": 8,
      },
      "progress": Object {
        "overlap": true,
        "roundCap": true,
        "show": true,
      },
      "show": true,
      "type": "gauge",
    },
  ],
  "title": Object {
    "text": "title-test",
  },
}
`;

exports[`formatGaugeChart should return an object with the correct format when historical length is even 1`] = `
Object {
  "series": Array [
    Object {
      "anchor": Object {
        "itemStyle": Object {
          "color": "#FAC858",
        },
        "show": true,
        "showAbove": true,
        "size": 18,
      },
      "axisLine": Object {
        "roundCap": true,
      },
      "center": Array [
        "25%",
        "57%",
      ],
      "data": Array [
        Object {
          "name": "Reliability",
          "value": "32.00",
        },
      ],
      "detail": Object {
        "backgroundColor": "inherit",
        "borderRadius": 3,
        "color": "#fff",
        "fontSize": 18,
        "height": 14,
        "width": 20,
      },
      "max": 1,
      "min": 0,
      "name": "Reliability",
      "pointer": Object {
        "icon": "path://M2.9,0.7L2.9,0.7c1.4,0,2.6,1.2,2.6,2.6v115c0,1.4-1.2,2.6-2.6,2.6l0,0c-1.4,0-2.6-1.2-2.6-2.6V3.3C0.3,1.9,1.4,0.7,2.9,0.7z",
        "length": "80%",
        "offsetCenter": Array [
          0,
          "8%",
        ],
        "width": 8,
      },
      "progress": Object {
        "overlap": true,
        "roundCap": true,
        "show": true,
      },
      "show": true,
      "type": "gauge",
    },
    Object {
      "anchor": Object {
        "itemStyle": Object {
          "color": "#FAC858",
        },
        "show": true,
        "showAbove": true,
        "size": 18,
      },
      "axisLine": Object {
        "roundCap": true,
      },
      "center": Array [
        "75%",
        "57%",
      ],
      "data": Array [
        Object {
          "name": "Reliability",
          "value": "32.00",
        },
      ],
      "detail": Object {
        "backgroundColor": "inherit",
        "borderRadius": 3,
        "color": "#fff",
        "fontSize": 18,
        "height": 14,
        "width": 20,
      },
      "max": 1,
      "min": 0,
      "name": "Reliability",
      "pointer": Object {
        "icon": "path://M2.9,0.7L2.9,0.7c1.4,0,2.6,1.2,2.6,2.6v115c0,1.4-1.2,2.6-2.6,2.6l0,0c-1.4,0-2.6-1.2-2.6-2.6V3.3C0.3,1.9,1.4,0.7,2.9,0.7z",
        "length": "80%",
        "offsetCenter": Array [
          0,
          "8%",
        ],
        "width": 8,
      },
      "progress": Object {
        "overlap": true,
        "roundCap": true,
        "show": true,
      },
      "show": true,
      "type": "gauge",
    },
  ],
  "title": Object {
    "text": "title-test",
  },
}
`;
